[package]
name = "oss-emulator"
version = "1.0.0"
edition = "2021"
description = "轻量级的阿里云 OSS 服务模拟器"

[dependencies]
# HTTP Server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "1"
http = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = { version = "0.36", features = ["serialize"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
url = "2"
walkdir = "2"
md-5 = "0.10"
hex = "0.4"
